--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,1 +1,35 @@
 <h1>Topページ</h1>
+
+<body>
+<main>
+    <p id="notice"></p>
+    <div class="container">
+        <div class="row">
+            <div class="mx-auto col-11 col-sm-10 col-lg-8 col-xl-6">
+                <h1>
+                    "welcome to"
+                    <strong>Bookers</strong>
+                    "!!"
+                </h1>
+                <p>
+                    "In"
+                    <strong>Bookers</strong>
+                    ","
+                </p>
+                <p>you can share and exchange  your opinions , inpressions , and emotions</p>
+                <p> about various books!</p>
+                <div class="btn-wrapper col-10 mx-auto">
+                    <div class="row">
+                        <%= link_to class:"btn btn-info btn-sm btn-block mb-3 sign_in" %>
+                        Log in
+                    </div>
+                    <div class="row">
+                        <%= link_to class:"btn btn-success btn-sm btn-block sign_up" %>
+                        Sign up
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</main>
+</body>
