--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,31 +12,70 @@
 
   <body>
     <header>
-      <% if user_signed_in? %>
-      <li>
-          <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
-      </li>
-     <% else %>
-       <li>
-           <%= link_to '投稿フォーム', new_book_path %>
-       </li>
+       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+          <div class="container">
+             <a class:"navbar-brand" href="/">
+                 <span>Bookers</span>
+             </a>
 
-       <li>
-         <%= link_to 'マイページ', user_path(current_user.id) %>
-       </li>
+        <% if user_signed_in? %>
+             <div class="navbar-collapse collapse" id="navbarNavDropdown" style>
+                 <ul class="navbar-nav ml-auto">
+                     <li>
+                         <%= link_to user_path(current_user) , class:"nav-link text-light" %>
+                         Home
+                     </li>
+                     <li>
+                         <%= link_to home_about_path ,class:"nav-link text-light" %>
+                         About
+                     </li>
+                     <li>
+                         <%= link_to new_user_registration_path ,class:"nav-link text-light" %>
+                         Sign up
+                     </li>
+                     <li>
+                         <%= link_to new_user_session_path ,class:"nav-link text-light" %>
+                         Log in
+                     </li>
+        <% else %>
+            <%= link_to destroy_user_session_path, method: :delete %>
+                 </ul>
+             </div>
+          </div>
+       </nav>
+       <% end %>
+     <!-- <% if user_signed_in? %>-->
+     <!--  <li>-->
+     <!--      <%= link_to '投稿フォーム', new_book_path %>-->
+     <!--  </li>-->
 
-       <li>
-        <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
-       </li>
-      <% else %>
-       <li>
-         <%= link_to "新規登録", new_user_registration_path %>
-       </li>
-       <li>
-         <%= link_to"ログイン", new_user_session_path %>
-        </li>
-      <% end %>
+     <!--  <li>-->
+     <!--    <%= link_to 'マイページ', user_path(current_user) %>-->
+     <!--  </li>-->
+
+     <!--  <li>-->
+     <!--   <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>-->
+     <!--  </li>-->
+     <!--<% else %>-->
+     <!--  <li>-->
+     <!--    <%= link_to "新規登録", new_user_registration_path %>-->
+     <!--  </li>-->
+     <!--  <li>-->
+     <!--    <%= link_to"ログイン", new_user_session_path %>-->
+     <!--   </li>-->
+
+     <!-- <% end %>-->
     </header>
+
+    <footer>
+        <div class="container mt-5">
+            <div class="row">
+                <div class="mx-auto">
+                    <p>CopyRight Infratop.inc</p>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <%= yield %>
   </body>
