--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,28 +1,14 @@
 <%= render 'users/user_info', {user: current_user, book: @book} %>
 
-
-     <p id="notice"></p>
-
-<h1>Books</h1>
-
+<h1>Book detail</h1>
 <table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Opinion</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
 
   <tbody>
-    <% @books.each do |book| %>
       <tr>
         <td><%= book.title %></td>
         <td><%= book.opinion %></td>
-        <td><%= link_to 'Show' , book_path(book.id) %></td>
         <td><%= link_to 'edit' , edit_book_path(book.id) %></td>
         <td><%= link_to 'Destroy' , book_path(book.id) ,method: :delete,"data-confirm"=>"Are you sure?" %></td>
       </tr>
-    <% end %>
   </tbody>
 </table>
