--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,56 +17,37 @@
              <a class:"navbar-brand" href="/">
                  <span>Bookers</span>
              </a>
-
-        <% if user_signed_in? %>
              <div class="navbar-collapse collapse" id="navbarNavDropdown" style>
+              <% if user_signed_in? %>
+               <ul class="navbar-nav ml-auto">
+                 <li>
+                  <%= link_to  "Log out",destroy_user_session_path, method: :delete %>
+                 </li>
+               </ul>
+              <% else %>
                  <ul class="navbar-nav ml-auto">
                      <li>
-                         <%= link_to user_path(current_user) , class:"nav-link text-light" %>
-                         Home
+                         <%= link_to  "Home",root_path , class:"nav-link text-light" %>
                      </li>
                      <li>
-                         <%= link_to home_about_path ,class:"nav-link text-light" %>
-                         About
+                         <%= link_to "About", home_about_path ,class:"nav-link text-light" %>
                      </li>
                      <li>
-                         <%= link_to new_user_registration_path ,class:"nav-link text-light" %>
-                         Sign up
+                         <%= link_to "Sign up", new_user_registration_path ,class:"nav-link text-light" %>
                      </li>
                      <li>
-                         <%= link_to new_user_session_path ,class:"nav-link text-light" %>
-                         Log in
+                         <%= link_to "Log in", new_user_session_path ,class:"nav-link text-light" %>
                      </li>
-        <% else %>
-            <%= link_to destroy_user_session_path, method: :delete %>
-                 </ul>
+                  </ul>
+              <% end %>
              </div>
           </div>
        </nav>
-       <% end %>
-     <!-- <% if user_signed_in? %>-->
-     <!--  <li>-->
-     <!--      <%= link_to '投稿フォーム', new_book_path %>-->
-     <!--  </li>-->
 
-     <!--  <li>-->
-     <!--    <%= link_to 'マイページ', user_path(current_user) %>-->
-     <!--  </li>-->
-
-     <!--  <li>-->
-     <!--   <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>-->
-     <!--  </li>-->
-     <!--<% else %>-->
-     <!--  <li>-->
-     <!--    <%= link_to "新規登録", new_user_registration_path %>-->
-     <!--  </li>-->
-     <!--  <li>-->
-     <!--    <%= link_to"ログイン", new_user_session_path %>-->
-     <!--   </li>-->
-
-     <!-- <% end %>-->
     </header>
 
+
+    <%= yield %>
     <footer>
         <div class="container mt-5">
             <div class="row">
@@ -76,7 +57,5 @@
             </div>
         </div>
     </footer>
-
-    <%= yield %>
   </body>
 </html>
