--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,4 +1,4 @@
-<%= render 'users/user_info', {user: current_user, book: @book} %>
+<%= render 'users/user_info', {user: current_user, book: @book_new} %>
 
 
      <p id="notice"></p>
@@ -15,13 +15,14 @@
   </thead>
 
   <tbody>
-    <% @books.each do |book| %>
+    <% @book_new.each do |book| %>
       <tr>
+        <td><%= image_tag book.get_profile_image(100,100) %></td>
         <td><%= book.title %></td>
         <td><%= book.opinion %></td>
-        <td><%= link_to 'Show' , book_path(book.id) %></td>
-        <td><%= link_to 'edit' , edit_book_path(book.id) %></td>
-        <td><%= link_to 'Destroy' , book_path(book.id) ,method: :delete,"data-confirm"=>"Are you sure?" %></td>
+        <td><%#= link_to 'Show' , book_path(book.id) %></td>
+        <td><%#= link_to 'edit' , edit_book_path(book.id) %></td>
+        <td><%#= link_to 'Destroy' , book_path(book.id) ,method: :delete,"data-confirm"=>"Are you sure?" %></td>
       </tr>
     <% end %>
   </tbody>
