--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,14 +1,14 @@
-<%= render 'users/user_info', {user: current_user, book: @book} %>
+<%= render 'users/user_info', {user: current_user, book: @book_new} %>
 
 <h1>Book detail</h1>
 <table>
 
   <tbody>
       <tr>
-        <td><%= book.title %></td>
-        <td><%= book.opinion %></td>
-        <td><%= link_to 'edit' , edit_book_path(book.id) %></td>
-        <td><%= link_to 'Destroy' , book_path(book.id) ,method: :delete,"data-confirm"=>"Are you sure?" %></td>
+        <td><%= @book.title %></td>
+        <td><%= @book.opinion %></td>
+        <td><%= link_to 'edit' , edit_book_path(@book.id) %></td>
+        <td><%= link_to 'Destroy' , book_path(@book.id) ,method: :delete,"data-confirm"=>"Are you sure?" %></td>
       </tr>
   </tbody>
 </table>
