--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,4 @@
-<%= render 'users/user_info', {user: current_user, book: @book} %>
+<%= render 'users/user_info', {user: current_user, book: @book_new} %>
 
 <h1>Users</h1>
 
@@ -12,11 +12,11 @@
   </thead>
 
   <tbody>
-    <% @books.each do |book| %>
+    <% @user.each do |user| %>
       <tr>
-        <td><%= user.image %></td>
+        <td><%= image_tag user.get_profile_image(100,100) %></td>
         <td><%= user.name %></td>
-        <td><%= link_to 'Show' , book_path(book.id) %></td>
+        <td><%= link_to 'Show' , user_path(user.id) %></td>
       </tr>
     <% end %>
   </tbody>
