--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,9 +1,9 @@
 <h1>Editing Book</h1>
 
-<% if book.errors.any? %>
- <%= book.errors.count %>errors prohibited this book from being saved:
+<% if @book.errors.any? %>
+ <%= @book.errors.count %>errors prohibited this book from being saved:
  <ul>
-  <% book.errors.full_messages.each do |message| %>
+  <% @book.errors.full_messages.each do |message| %>
     <li><%= message %></li>
   <% end %>
  </ul>
@@ -21,8 +21,7 @@
 
 <tbody>
       <tr>
-        <td><%= link_to 'Show' , book_path(book.id) %></td>
-        <td><%= link_to 'Back' , edit_book_path(book.id) %></td>
+        <td><%= link_to 'Show' , book_path(@book.id) %></td>
+        <td><%= link_to 'Back' , edit_book_path(@book.id) %></td>
       </tr>
-    <% end %>
-  </tbody>
+ </tbody>
