--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -15,9 +15,9 @@
   </thead>
 
   <tbody>
-    <% @book_new.each do |book| %>
+    <% @books.each do |book| %>
       <tr>
-        <td><%= image_tag book.get_profile_image(100,100) %></td>
+        <td><%= image_tag book.user.get_profile_image(80, 80) %></td>
         <td><%= book.title %></td>
         <td><%= book.opinion %></td>
         <td><%#= link_to 'Show' , book_path(book.id) %></td>
