--- a/app/views/users/_user_info.html.erb
+++ b/app/views/users/_user_info.html.erb
@@ -18,10 +18,10 @@
 
 <h2>New book</h2>
 
-<% if book_new.errors.any? %>
- <%= book_new.errors.count %>errors prohibited this book from being saved:
+<% if book.errors.any? %>
+ <%= book.errors.count %>errors prohibited this book from being saved:
  <ul>
-  <% book_new.errors.full_messages.each do |message| %>
+  <% book.errors.full_messages.each do |message| %>
     <li><%= message %></li>
   <% end %>
  </ul>
