--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,2 +1,25 @@
-<h1>Users#edit</h1>
-<p>Find me in app/views/users/edit.html.erb</p>
+<h2>User info</h2>
+
+<% if @user.errors.any? %>
+ <%= @user.errors.count %>errors prohibited this book from being saved:
+ <ul>
+  <% @user.errors.full_messages.each do |message| %>
+    <li><%= message %></li>
+  <% end %>
+ </ul>
+<% end %>
+
+<%= form_with model: @user, url: user_path(@user.id), method: :patch do |f| %>
+
+ <h4>Name</h4>
+ <%= f.text_field :name %>
+
+ <h4>Image</h4>
+ <%= f.file_field :profile_image %>
+
+ <h4>Introduction</h4>
+ <%= f.text_area :introduction %>
+
+ <%= f.submit 'Update User' %>
+
+<% end %>
