--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,16 +1,24 @@
-<div>
-  <h3><%= @user.name %></h3>
-  <%= image_tag @user.get_profile_image(100,100) %>
-</div>
+<%= render 'users/user_info', {user: current_user, book: @book_new} %>
 
 
-<% @books.each do |book| %>
-<div>
-  <%= link_to book_path(book.id) do %>
-  <% end %>
-  <p>投稿ユーザー画像:<%= image_tag @user.get_profile_image(100,100) %></p>
-  <p>ショップ名:<%= book.shop_name %></p>
-  <p>説明:<%= book.caption %></p>
-  <p>ユーザーネーム:<%= book.user.name %></p>
-</div>
-<% end %>
+<h1>Books</h1>
+
+<table>
+  <thead>
+    <tr>
+      <th>Title</th>
+      <th>Opinion</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @books.each do |book| %>
+      <tr>
+        <td><%= image_tag book.get_profile_image(80,80) %></td>
+        <td><%= book.title %></td>
+        <td><%= book.opinion %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
