--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,5 +1,13 @@
-<%= render 'users/user_info', {user: current_user, book: @book_new} %>
+<% if @book_new.errors.any? %>
+  <%= @book_new.errors.count %>件のエラーが発生しました
+  <ul>
+    <% @book_new.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+<% end %>
 
+<%= render 'users/user_info', {user: current_user, book: @book_new} %>
 
      <p id="notice"></p>
 
@@ -17,10 +25,15 @@
   <tbody>
     <% @books.each do |book| %>
       <tr>
-        <td><%= image_tag book.user.get_profile_image(80, 80) %></td>
-        <td><%= book.title %></td>
+        <td><%= link_to user_path(book.user.id) do %>
+        <%= image_tag book.user.get_profile_image(80, 80) %>
+        <% end %>
+        </td>
+        <td><%= link_to book_path(book.id) do %>
+        <%= book.title %>
+        <% end %>
+        </td>
         <td><%= book.opinion %></td>
-        <td><%#= link_to 'Show' , book_path(book.id) %></td>
         <td><%#= link_to 'edit' , edit_book_path(book.id) %></td>
         <td><%#= link_to 'Destroy' , book_path(book.id) ,method: :delete,"data-confirm"=>"Are you sure?" %></td>
       </tr>
