--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,15 @@
               <% if user_signed_in? %>
                <ul class="navbar-nav ml-auto">
                  <li>
+                  <%= link_to  "Home",root_path , class:"nav-link text-light" %>
+                 </li>
+                 <li>
+                  <%= link_to  "Users",users_path , class:"nav-link text-light" %>
+                 </li>
+                 <li>
+                  <%= link_to  "Books",books_path ,class:"nav-link text-light" %>
+                 </li>
+                 <li>
                   <%= link_to  "Log out",destroy_user_session_path, method: :delete %>
                  </li>
                </ul>
@@ -46,6 +55,7 @@
 
     </header>
 
+    <%= flash[:notice] %>
 
     <%= yield %>
     <footer>
