--- a/app/views/users/_user_info.html.erb
+++ b/app/views/users/_user_info.html.erb
@@ -14,18 +14,10 @@
   </tbody>
 </table>
 
-<%= link_to 'edit' , user_path(user.id) %>
+<%= link_to 'edit' , edit_user_path(user.id) %>
 
 <h2>New book</h2>
 
-<% if book.errors.any? %>
- <%= book.errors.count %>errors prohibited this book from being saved:
- <ul>
-  <% book.errors.full_messages.each do |message| %>
-    <li><%= message %></li>
-  <% end %>
- </ul>
-<% end %>
 
 <%= form_with model: book do |f| %>
   <h4>Title</h4>
