--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,7 +15,7 @@
   <tbody>
     <% @books.each do |book| %>
       <tr>
-        <td><%= image_tag book.get_profile_image(80,80) %></td>
+        <td><%#= image_tag book.user.get_profile_image(80,80) %></td>
         <td><%= book.title %></td>
         <td><%= book.opinion %></td>
       </tr>
