--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,40 +14,54 @@
     <header>
        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
           <div class="container">
-             <a class:"navbar-brand" href="/">
-                 <span>Bookers</span>
-             </a>
+              <%= link_to  "Bookers",root_path , class:"nav-link text-light" %>
              <div class="navbar-collapse collapse" id="navbarNavDropdown" style>
               <% if user_signed_in? %>
                <ul class="navbar-nav ml-auto">
                  <li>
-                  <%= link_to  "Home",root_path , class:"nav-link text-light" %>
+                  <%= link_to user_path(current_user),class: 'nav-link text-light' do %>
+                    <i class="fas fa-home"></i>Home
+                  <% end %>
                  </li>
                  <li>
-                  <%= link_to  "Users",users_path , class:"nav-link text-light" %>
+                  <%= link_to users_path,class: 'nav-link text-light' do %>
+                    <i class="fas fa-users"></i>Users
+                  <% end %>
                  </li>
                  <li>
-                  <%= link_to  "Books",books_path ,class:"nav-link text-light" %>
+                  <%= link_to books_path,class: 'nav-link text-light' do %>
+                    <i class="fas fa-book-open"></i>Books
+                  <% end %>
                  </li>
                  <li>
-                  <%= link_to  "Log out",destroy_user_session_path, method: :delete %>
+                  <%= link_to destroy_user_session_path,method: :delete,class: 'nav-link text-light' do %>
+                    <i class="fas fa-sign-in-alt"></i>Log out
+                  <% end %>
                  </li>
                </ul>
               <% else %>
-                 <ul class="navbar-nav ml-auto">
-                     <li>
-                         <%= link_to  "Home",root_path , class:"nav-link text-light" %>
-                     </li>
-                     <li>
-                         <%= link_to "About", home_about_path ,class:"nav-link text-light" %>
-                     </li>
-                     <li>
-                         <%= link_to "Sign up", new_user_registration_path ,class:"nav-link text-light" %>
-                     </li>
-                     <li>
-                         <%= link_to "Log in", new_user_session_path ,class:"nav-link text-light" %>
-                     </li>
-                  </ul>
+               <ul class="navbar-nav ml-auto">
+                 <li>
+                  <%= link_to root_path,class: 'nav-link text-light' do %>
+                    <i class="fas fa-home"></i>Home
+                  <% end %>
+                 </li>
+                 <li>
+                  <%= link_to home_about_path,class: 'nav-link text-light' do %>
+                    <i class="fas fa-link"></i>About
+                  <% end %>
+                 </li>
+                 <li>
+                  <%= link_to new_user_registration_path,class: 'nav-link text-light' do %>
+                    <i class="fas fa-user-plus"></i>Sign up
+                  <% end %>
+                 </li>
+                 <li>
+                  <%= link_to new_user_session_path,class: 'nav-link text-light' do %>
+                    <i class="fas fa-sign-in-alt"></i>Log in
+                  <% end %>
+                 </li>
+               </ul>
               <% end %>
              </div>
           </div>
@@ -56,8 +70,12 @@
     </header>
 
     <%= flash[:notice] %>
+    <div class="container mt-5">
+            <div class="row">
 
     <%= yield %>
+            </div>
+    </div>
     <footer>
         <div class="container mt-5">
             <div class="row">
