--- a/app/views/users/_user_info.html.erb
+++ b/app/views/users/_user_info.html.erb
@@ -14,7 +14,11 @@
   </tbody>
 </table>
 
-<%= link_to 'edit' , edit_user_path(user.id) %>
+  <%= link_to edit_user_path,class: 'nav-link text-light' do %>
+    <i class="fas fa-user-cog"></i>
+  <% end %>
+
+
 
 <h2>New book</h2>
 
