--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,7 @@
+<div class="col-md-3">
 <%= render 'users/user_info', {user: current_user, book: @book_new} %>
-
+</div>
+<div class="col-md-9">
 <h1>Users</h1>
 
 <table>
@@ -21,3 +23,4 @@
     <% end %>
   </tbody>
 </table>
+</div>
