--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,7 @@
-<%= render 'users/user_info', {user: current_user, book: @book_new} %>
-
-
+<div class="col-md-3">
+<%= render 'users/user_info', {user: @user, book: @book_new} %>
+</div>
+<div class="col-md-9">
 <h1>Books</h1>
 
 <table>
@@ -22,3 +23,4 @@
     <% end %>
   </tbody>
 </table>
+</div
