--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,9 @@
+<div class="container px-5 px-sm-0">
+<div class="row">
 <div class="col-md-3">
 <%= render 'users/user_info', {user: current_user, book: @book_new} %>
 </div>
-<div class="col-md-9">
+<div class="col-md-8 offset-md-1">
 <h1>Users</h1>
 
 <table>
@@ -23,4 +25,6 @@
     <% end %>
   </tbody>
 </table>
+</div>
+</div>
 </div>
