--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,3 +1,4 @@
+<div class="col-md-8">
 <h1>Editing Book</h1>
 
 <% if @book.errors.any? %>
@@ -13,8 +14,8 @@
   <h4>Title</h4>
   <%= f.text_field :title %>
 
- <h4>Opinion</h4>
- <%= f.text_area :opinion %>
+ <h4>Body</h4>
+ <%= f.text_area :body %>
 
  <%= f.submit 'Update Book' %>
 <% end %>
@@ -22,6 +23,7 @@
 <tbody>
       <tr>
         <td><%= link_to 'Show' , book_path(@book.id) %></td>
-        <td><%= link_to 'Back' , edit_book_path(@book.id) %></td>
+        <td><%= link_to 'Back' , books_path %></td>
       </tr>
  </tbody>
+ </div>
