--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,15 +1,17 @@
 <% if @book_new.errors.any? %>
-  <%= @book_new.errors.count %>件のエラーが発生しました
+  <%= @book_new.errors.count %> errors prohibited this obj from being saved:
   <ul>
     <% @book_new.errors.full_messages.each do |message| %>
       <li><%= message %></li>
     <% end %>
   </ul>
 <% end %>
+<div class="container px-5 px-sm-0">
+<div class="row">
 <div class="col-md-3">
 <%= render 'users/user_info', {user: current_user, book: @book_new} %>
 </div>
-<div class="col-md-9">
+<div class="col-md-8 offset-md-1">
      <p id="notice"></p>
 
 <h1>Books</h1>
@@ -18,7 +20,7 @@
   <thead>
     <tr>
       <th>Title</th>
-      <th>Opinion</th>
+      <th>Body</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -34,11 +36,13 @@
         <%= book.title %>
         <% end %>
         </td>
-        <td><%= book.opinion %></td>
+        <td><%= book.body %></td>
         <td><%#= link_to 'edit' , edit_book_path(book.id) %></td>
         <td><%#= link_to 'Destroy' , book_path(book.id) ,method: :delete,"data-confirm"=>"Are you sure?" %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
+</div>
+</div>
 </div>
