--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,14 +1,35 @@
-<%= render 'users/user_info', {user: current_user, book: @book_new} %>
-
+<div class="container">
+<div class="row">
+<div class="col-md-3">
+<%= render 'users/user_info', {user: @book.user, book: @book_new} %>
+</div>
+<div class="col-md-8 offset-md-1">
 <h1>Book detail</h1>
 <table>
 
   <tbody>
       <tr>
-        <td><%= @book.title %></td>
-        <td><%= @book.opinion %></td>
-        <td><%= link_to 'edit' , edit_book_path(@book.id) %></td>
-        <td><%= link_to 'Destroy' , book_path(@book.id) ,method: :delete,"data-confirm"=>"Are you sure?" %></td>
+        <td><%= link_to user_path(@book.user.id) do %>
+             <%= image_tag @book.user.get_profile_image(80, 80) %>
+             <%= @book.user.name %>
+            <% end %>
+        </td>
+        <td><%= link_to book_path(@book.id) do %>
+             <%= @book.title %>
+            <% end %>
+        </td>
+        <td><%= @book.body %></td>
+        <td><% if @book.user == current_user %>
+             <%= link_to 'Edit' , edit_book_path(@book.id) %>
+            <% end %>
+        </td>
+        <td><% if @book.user == current_user %>
+             <%= link_to 'Destroy' , book_path(@book.id) ,method: :delete,"data-confirm"=>"Are you sure?" %>
+            <% end %>
+        </td>
       </tr>
   </tbody>
 </table>
+</div>
+</div>
+</div>
