--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,4 +1,4 @@
-<h1>Topページ</h1>
+
 
 
 <main>
@@ -7,14 +7,16 @@
         <div class="row">
             <div class="mx-auto col-11 col-sm-10 col-lg-8 col-xl-6">
                 <h1>
-                    "welcome to"
+                    welcome to
+                    <i class="fas fa-book"></i>
                     <strong>Bookers</strong>
-                    "!!"
+                    !!
                 </h1>
                 <p>
-                    "In"
+                    In
+                    <i class="fas fa-book"></i>
                     <strong>Bookers</strong>
-                    ","
+                    ,
                 </p>
                 <p>you can share and exchange  your opinions , inpressions , and emotions</p>
                 <p> about various books!</p>
