--- a/app/views/users/_user_info.html.erb
+++ b/app/views/users/_user_info.html.erb
@@ -14,7 +14,7 @@
   </tbody>
 </table>
 
-  <%= link_to edit_user_path,class: 'nav-link text-light' do %>
+  <%= link_to edit_user_path(user.id),class: 'nav-link text-light' do %>
     <i class="fas fa-user-cog"></i>
   <% end %>
 
@@ -27,8 +27,8 @@
   <h4>Title</h4>
   <%= f.text_field :title %>
 
- <h4>Opinion</h4>
- <%= f.text_area :opinion %>
+ <h4>Body</h4>
+ <%= f.text_area :body %>
 
  <%= f.submit 'Create Book' %>
 <% end %>
