--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,14 +1,16 @@
+<div class="container px-5 px-sm-0">
+<div class="row">
 <div class="col-md-3">
 <%= render 'users/user_info', {user: @user, book: @book_new} %>
 </div>
-<div class="col-md-9">
+<div class="col-md-8 offset-md-1">
 <h1>Books</h1>
 
 <table>
   <thead>
     <tr>
       <th>Title</th>
-      <th>Opinion</th>
+      <th>Body</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -16,11 +18,19 @@
   <tbody>
     <% @books.each do |book| %>
       <tr>
-        <td><%#= image_tag book.user.get_profile_image(80,80) %></td>
-        <td><%= book.title %></td>
-        <td><%= book.opinion %></td>
+        <td>><%= link_to user_path(book.user.id) do %>
+              <%= image_tag book.user.get_profile_image(80, 80) %>
+             <% end %>
+        </td>
+        <td><%= link_to book_path(book.id) do %>
+              <%=  book.title %>
+            <% end %>
+        </td>
+        <td><%= book.body %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
-</div
+</div>
+</div>
+</div>
